# openeo-pg-parser-networkx

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  resolved_gfm_graph.json
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
eodc_pg_parser/: executor.py  graph.py  model.py  models.py  pg_schema.py  process_implementations.py  process_registry.py  utils.py
eodc_pg_parser/models/: openeo_api.py
examples/: 01_minibackend_demo.ipynb
notebooks/: executor.ipynb  test_executor.ipynb  test_graphs.ipynb  test_notebook.ipynb  test_parser.ipynb
openeo_pg_parser_networkx/: __init__.py  graph.py  pg_schema.py  process_registry.py  resolving_utils.py  utils.py
tests/: conftest.py  test_eodc_pg_parser.py  test_parser.py  test_pg_parser.py  test_pg_provenance.py  test_pg_resolving.py  test_process_registry.py
tests/data/: boa.nc  filter_spatial.json  load_save.json  max.json  pg-evi-example.json  reduce.json
tests/data/graphs/: aggregate.josn  aggregate.json  all_math.json  apply.json  filter_spatial.json  filter_temporal.json  fit_curve.json  fit_rf_pg.json  fit_rf_pg_0.json  load_save.json  math_pg.json  none_1.json  none_2.json  none_3.json  pg-evi-example.json  reduce.json  s2_max_ndvi_global_parameter.json  snap.json
tests/data/res_tests/predefined/: add.json  mulitply.json
tests/data/res_tests/resolved/: resolved_complex.json  resolved_gfm.json  resolved_sen2like.json
tests/data/res_tests/udps/: gfm.json  nested_add.json  sen2like_original_outputs.json  valid_load.json  w_add.json
tests/data/res_tests/unresolved/: unresolved_complex.json  unresolved_gfm.json  unresolved_sen2like.json
