[tool.poetry]
name = "eodc-pg-parser"
version = "0.1.3"
description = "Parse OpenEO process graphs from JSON to traversible Python objects."
authors = ["Lukas Weidenholzer <lukas.weidenholzer@eodc.eu>", "Sean Hoyal <sean.hoyal@eodc.eu>", "Valentina Hutter <valentina.hutter@eodc.eu>"]
packages = [
    { include = "eodc_pg_parser" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pydantic = "^1.9.1"
pyproj = "^3.4.0"
networkx = {extras = ["default"], version = "^2.8.6"}
shapely = "1.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipykernel = "^6.13.0"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.black]
skip-string-normalization = true
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
