[tool.poetry]
name = "openeo-pg-parser-networkx"
version = "2023.1.2"
description = "Parse OpenEO process graphs from JSON to traversible Python objects."
authors = ["Lukas Weidenholzer <lukas.weidenholzer@eodc.eu>", "Sean Hoyal <sean.hoyal@eodc.eu>", "Valentina Hutter <valentina.hutter@eodc.eu>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/Open-EO/openeo-pg-parser-networkx"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

packages = [
    { include = "openeo_pg_parser_networkx" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pydantic = "^1.9.1"
pyproj = "^3.4.0"
networkx = {extras = ["default"], version = "^2.8.6"}
shapely = ">=1.8"
geojson-pydantic = "^0.5.0"
numpy = "^1.24.1"
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipykernel = "^6.13.0"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"

[tool.black]
skip-string-normalization = true
line-length = 90

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
