[tool.poetry]
name = "openeo-pg-parser-networkx"
version = "2025.8.1"

description = "Parse OpenEO process graphs from JSON to traversible Python objects."
authors = ["Lukas Weidenholzer <lukas.weidenholzer@eodc.eu>", "Sean Hoyal <sean.hoyal@eodc.eu>", "Valentina Hutter <valentina.hutter@eodc.eu>", "Gerald Irsiegler <gerald.irsiegler@eodc.eu>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/Open-EO/openeo-pg-parser-networkx"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [
    { include = "openeo_pg_parser_networkx" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.4.0"
pyproj = "^3.4.0"
networkx = "^2.8.6"
shapely = ">=1.8"
geojson-pydantic = "^1.0.0"
numpy = "^1.20.3"
pendulum = ">=3.0.0"
matplotlib = { version = "^3.7.1", optional = true }
traitlets = "<=5.9.0"
yprov4wfs = ">=0.0.8"
xarray = ">=2025.01.1,<=2025.08.01"
dask = ">=2023.4.0,<2025.2.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
pytest = "^7.1.3"
ipykernel = "^6.13.0"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"

[tool.poetry.extras]
plot = ["matplotlib"]

[tool.black]
skip-string-normalization = true
line-length = 90

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
